[package]
name = "alloy-anvil-bug"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "0.1.4", features = ["full", "node-bindings"] }
anyhow = "1.0"
futures = "0.3"
time = { version = "0.3", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["time", "local-time", "env-filter"] }
